# remux

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  rustfmt.toml
.github/: pr-title-checker-config.json
.github/workflows/: ci.yml  merge-gates.yml  pr-title-checker.yml  pr-title.yml
cli/: Cargo.toml
cli/src/: app.rs  args.rs  cli_event_parser.rs  error.rs  input.rs  main.rs  prelude.rs  state_view.rs  term.rs  utils.rs
cli/src/actors/: client.rs  io.rs  lua.rs  mod.rs  popup.rs  ui.rs  ui2.rs  widget_runner.rs
cli/src/input_parser/: events.rs  mod.rs  parser.rs
cli/src/states/: daemon_state.rs  mod.rs  status_line_state.rs
cli/src/tasks/: lua.rs  mod.rs
cli/src/ui/: basic_selector_widget.rs  fuzzy_selector_widget.rs  mod.rs  status_line_widget.rs  traits.rs  ui.rs
cli/src/widgets/: basic_selector.rs  fuzzy_selector.rs  mod.rs  selector.rs  terminal.rs  traits.rs
core/: Cargo.toml
core/src/: comm.rs  communication.rs  constants.rs  daemon_utils.rs  error.rs  events.rs  lib.rs  messages.rs  notifications.rs  prelude.rs  rand.rs  states.rs  types.rs
core/src/messages/: mod.rs  request.rs  response.rs  traits.rs
daemon/: Cargo.toml
daemon/src/: actor.rs  cell.rs  client.rs  client_session.rs  context.rs  control_signals.rs  daemon.rs  error.rs  input_parser.rs  layout.rs  macros.rs  main.rs  pane.rs  prelude.rs  pty.rs  session.rs  session_manager.rs  traits.rs  types.rs  window.rs
daemon/src/actors/: client.rs  client_connection.rs  mod.rs  pane.rs  pty.rs  session.rs  session_manager.rs  window.rs
daemon/src/window/: mod.rs  tree.rs
defaults/: statusbar.lua
handle-macro/: Cargo.toml
handle-macro/src/: lib.rs
logs/: remux-cli.log.2025-11-12
src/: main.rs
