[workspace]
members = ["daemon", "cli", "core", "handle-macro"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
bytes = { version = "1.11.0", features = ["serde"] }
crossterm = { version = "0.29.0" }
derive_more = { version = "2", features = ["display"] }
itertools = { version = "0.14" }
futures-util = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145" }
tokio = { version = "1.48", features = ["full"] }
tracing = { version = "0.1" }
tracing-error = { version = "0.2" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
vt100 = { version = "0" }
color-eyre = { version = "0.6" }
