[package]
name = "remux-cli"
version = "0.1.0"
edition.workspace = true
authors = ["Kaleb Dickerson", "Ryan Weisman"]

[dependencies]
handle-macro = {path = "../handle-macro"}
remux-core = { path = "../core" }

bytes.workspace = true
crossterm.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

clap = { version = "4.5.51", features = ["derive"] }
ratatui = { version = "0.28.1", features = ["crossterm"] }
terminput = "0.5.11"
