[package]
name = "remux-core"
version = "0.1.0"
edition.workspace = true
authors = ["Kaleb Dickerson", "Ryan Weisman"]

[dependencies]
bytes.workspace = true
derive_more.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

bincode = "2.0.1"
fs2 = "0.4.3"
