[package]
name = "remux-daemon"
version = "0.1.0"
edition.workspace = true
authors = ["Kaleb Dickerson", "Ryan Weisman"]


[dependencies]
tokio.workspace = true
serde.workspace = true
itertools.workspace = true
thiserror.workspace = true
remux-core = { path = "../core" }
pty = "0.2.2"
nix = { version = "0.30.1", features = ["term", "process", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
bytes = "1.11.0"
