[package]
name = "remux-daemon"
version = "0.1.0"
edition.workspace = true
authors = ["Kaleb Dickerson", "Ryan Weisman"]


[dependencies]
handle-macro = {path = "../handle-macro"}
remux-core = { path = "../core" }

bytes.workspace = true
crossterm.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

nix = { version = "0.30.1", features = ["term", "process", "signal"] }
pty = "0.2.2"
vt100 = "0.16.2"
rand = "0.9.2"
regex = "1.12.2"
