[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "remux-daemon"
version = "0.1.0"
edition.workspace = true
authors = ["Kaleb Dickerson", "Ryan Weisman"]


[dependencies]
handle-macro = {path = "../handle-macro"}
remux-core = { path = "../core" }

bytes.workspace = true
crossterm.workspace = true
derive_more.workspace = true
itertools.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
vt100.workspace = true
color-eyre.workspace = true
tracing-error.workspace = true

nix = { version = "0.30.1", features = ["term", "process", "signal"] }
pty = "0.2.2"
rand = "0.9.2"
